--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.9c1fd7314a0e6eb139162751b248f0289949c9f5a40bb2f4b75c5f115436c00a.css" integrity="sha256-nB/XMUoObrE5FidRskjwKJlJyfWkC7L0t1xfEVQ2wAo=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.3c04e07ec14b67e1d33d0c447e1e788aa5b63a40d3ae44d99ff13d5420ce2f79.css" integrity="sha256-PATgfsFLZ&#43;HTPQxEfh54iqW2OkDTrkTZn/E9VCDOL3k=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
   </head>
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="/images/logos/fresh.svg" alt="" width="112" height="28">
+        <img src="/images/logos/mavroc.png" alt="" width="112" height="28">
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar-menu">
@@ -82,7 +82,7 @@
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="/images/logos/fresh.svg" alt="" width="112" height="28">
+        <img src="/images/logos/mavroc.png" alt="" width="112" height="28">
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="cloned-navbar-menu">
@@ -156,6 +156,16 @@
   <div class="container">
     <div class="tabs is-centered">
       <ul>
+        <li>
+          <a>
+            <img class="partner-logo" src="/images/logos/clients/bmwgroup.svg">
+          </a>
+        </li>
+        <li>
+          <a>
+            <img class="partner-logo" src="/images/logos/clients/dfki.svg">
+          </a>
+        </li>
       </ul>
     </div>
   </div>
@@ -420,7 +430,7 @@
               Luca Paroloni received the B.Sc. degree in information engineering and the M.Sc. degree in automation engineering from the University of Padova, Padova, Italy, in 2004 and 2006, respectively and the Ph.D. degree in electrical and computer engineering from Carnegie Mellon University, Pittsburgh, PA, in 2012. He is a specialist S/W developer at BMW AG, Munich, Germany, which he joined in 2016. His research interests include functional development for autonomous vehicles, with a special focus on map and localization problems, functional safety, and functional degradation.
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
+              <img src="/images/illustrations/faces/parolini.png" alt=""/>
               <h5>Luca Parolini</h5>
 	      <span><br>BMW</span>
             </div>
@@ -432,7 +442,7 @@
               Sebastian Schneider received his Diploma degree in 2006 from Technical University of Darmstadt, Germany, with a major focus on computer vision and robotics. Since 2014, Sebastian works at BMW AG, Munich, Germany, as a sensor fusion expert in the area of driver assistance systems and autonomous driving. As such he has contributed to the design of the sensor setup as well as the sensor fusion architecture of upcoming level 4 autonomous vehicles. His current research interests include localization, map and road model validation and reinforcement learning.
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/2.png" alt=""/>
+              <img src="/images/illustrations/faces/sesc.png" alt=""/>
               <h5>Sebastian Schneider</h5>
 	      <span><br>BMW</span>
             </div>
@@ -446,7 +456,7 @@
               Qing Rao received his Bachelor&#39;s degree in 2010 from Shanghai Jiao Tong University and his Master&#39;s degree in 2012 from TU Munich, with a major focus on computer vision and robotics. In 2019, he received his Ph.D. degree from TU Munich with the dissertation entitled Merging the Virtual and Real in a Car: In-Vehicle Augmented Reality. Since mid-2017, Qing works at BMW AG, Munich, Germany, as a machine learning expert in the area of autonomous driving. His current research interests include road model generation, 3D object detection, and active learning.
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
+              <img src="/images/illustrations/faces/qing.png" alt=""/>
               <h5>Qing Rao</h5>
 	      <span><br>BMW</span>
             </div>
@@ -480,7 +490,7 @@
     <div class="columns">
       <div class="column">
         <div class="footer-logo">
-          <img src="/images/logos/%25!s%28%3cnil%3e%29">
+          <img src="/images/logos/bmwgroup_dfki.png">
         </div>
       </div>
         <div class="column">
