--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.3c04e07ec14b67e1d33d0c447e1e788aa5b63a40d3ae44d99ff13d5420ce2f79.css" integrity="sha256-PATgfsFLZ&#43;HTPQxEfh54iqW2OkDTrkTZn/E9VCDOL3k=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.18d16e79789c975c7e492bc47a5926264686ee232c5fa745ab4cbc449207d767.css" integrity="sha256-GNFueXicl1x&#43;SSvEelkmJkaG7iMsX6dFq0y8RJIH12c=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
   </head>
@@ -258,7 +258,7 @@
             <div class="author">
               <img src="/images/illustrations/faces/gunnar.png" alt=""/>
               <h5>Gunnar Gräfe</h5>
-	      <span>Managing Director<br>3D Mapping Solutions</span>
+	      <span>Managing Director<br><a href="https://3d-mapping.de/en/" target="_blank">3D Mapping Solutions</a></span>
             </div>
           </figure>
         </div>
@@ -270,7 +270,7 @@
             <div class="author">
               <img src="/images/illustrations/faces/2.png" alt=""/>
               <h5>John Doe</h5>
-	      <span><br></span>
+	      <span><br>Confirmation pending</span>
             </div>
           </figure>
         </div>
@@ -282,7 +282,7 @@
             <div class="author">
               <img src="/images/illustrations/faces/1.png" alt=""/>
               <h5>Jane Doe</h5>
-	      <span><br></span>
+	      <span><br>Confirmation pending</span>
             </div>
           </figure>
         </div>
@@ -471,6 +471,20 @@
               <img src="/images/illustrations/faces/1.png" alt=""/>
               <h5>Jenny Yuan</h5>
 	      <span><br>BMW</span>
+            </div>
+          </figure>
+        </div>
+      </div>
+      <div class="columns is-vcentered">
+        <div class="column is-6">
+          <figure class="biographies">
+            <blockquote>
+              Oliver Wasenmüller received his Bachelor (B.Sc.) and Master (M.Sc.) degree in Computer Science from the University of Kaiserslautern, Germany. During his Master studies he worked on 3D reconstruction with perspective cameras. He finished his degree with a research stay and a Master Thesis at Sony’s European Technology Center (EuTEC). In his PhD thesis he researched on different algorithms for Time-of-Flight (ToF) RGB-D cameras in industrial application scenarios. Currently Oliver is a team leader for “Machine Vision and Autonomous Vehicles” in the Augmented Vision department of DFKI. His current projects involve cutting-edge technologies in the area of Computer Vision, Machine Learning, Autonomous Driving and Industrie 4.0.
+            </blockquote>
+            <div class="author">
+              <img src="/images/illustrations/faces/oliver.png" alt=""/>
+              <h5>Oliver Wasenmüller</h5>
+	      <span><br>DFKI</span>
             </div>
           </figure>
         </div>
