update uni logo and umar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.18d16e79789c975c7e492bc47a5926264686ee232c5fa745ab4cbc449207d767.css" integrity="sha256-GNFueXicl1x&#43;SSvEelkmJkaG7iMsX6dFq0y8RJIH12c=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.e30c03984b5c7eb8af8ff257f20dd72edd0494bcf2e5927cebf751994e3a008c.css" integrity="sha256-4wwDmEtcfrivj/JX8g3XLt0ElLzy5ZJ86/dRmU46AIw=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 <link rel="stylesheet" type="text/css" href="/css/cookieconsent.min.css" />
 
@@ -164,7 +164,7 @@
         </li>
         <li>
           <a>
-            <img class="partner-logo" src="/images/logos/clients/dfki.svg">
+            <img class="partner-logo" src="/images/logos/clients/uni_mannheim.svg">
           </a>
         </li>
       </ul>
@@ -266,12 +266,12 @@
         <div class="column is-4">
           <figure class="testimonial">
             <blockquote>
-              Title of the talk not yet confirmed.
+              Precise Positioning and Mapping for Driverless Vehicles: Analysis of Sensible 4&#39;s All-Weather Solutions for Automated Driving in Urban Environment
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/2.png" alt=""/>
-              <h5>John Doe</h5>
-	      <span><br>Confirmation pending</span>
+              <img src="/images/illustrations/faces/umar.png" alt=""/>
+              <h5>Umar Zakir Abdul Hamid</h5>
+	      <span>Senior Autonomous Vehicle Engineer<br><a href="https://www.sensible4.fi" target="_blank">Sensible 4</a></span>
             </div>
           </figure>
         </div>
@@ -301,7 +301,7 @@
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
         <h1 class="title section-title">Call for Papers</h1>
-        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the topics listed <a href="#section1">above</a>.<br><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2020 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least two members of the organization committee. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.</h3>
+        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the following topics .<br><br><ul><li><a href="#section1">Validated Road Models</a></li><li><a href="#section1">Map Data Life-Cycle Management</a></li><li><a href="#section1">Mapping Fraud Detection and Prevention</a></li></ul><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2020 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least two members of the organization committee. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.</h3>
       </div>
       <div class="column is-5 mt-40">
         <article class="media icon-box">
@@ -480,12 +480,12 @@
         <div class="column is-6">
           <figure class="biographies">
             <blockquote>
-              Oliver Wasenmüller received his Bachelor (B.Sc.) and Master (M.Sc.) degree in Computer Science from the University of Kaiserslautern, Germany. During his Master studies he worked on 3D reconstruction with perspective cameras. He finished his degree with a research stay and a Master Thesis at Sony’s European Technology Center (EuTEC). In his PhD thesis he researched on different algorithms for Time-of-Flight (ToF) RGB-D cameras in industrial application scenarios. Currently Oliver is a team leader for “Machine Vision and Autonomous Vehicles” in the Augmented Vision department of DFKI. His current projects involve cutting-edge technologies in the area of Computer Vision, Machine Learning, Autonomous Driving and Industrie 4.0.
+              Oliver Wasenmüller is full Professor at the Mannheim University for Applied Science. His research is in the intersection of Computer Vision and Artificial Intelligence with a focus on automotive. Previously he was a team leader for &#34;machine vision and autonomous vehicles&#34; at the German Research Center for Artificial Intelligence (DFKI). He is both speaker and reviewer in many scientific conferences in this field and co-organizes the ACM Computer Science in Cars Symposium (CSCS) as well as the IEEE CVPR workshop SAIAD.
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/oliver.png" alt=""/>
               <h5>Oliver Wasenmüller</h5>
-	      <span><br>DFKI</span>
+	      <span><br>Mannheim University for Applied Science</span>
             </div>
           </figure>
         </div>
@@ -505,7 +505,7 @@
     <div class="columns">
       <div class="column">
         <div class="footer-logo">
-          <img src="/images/logos/bmwgroup_dfki.png">
+          <img src="/images/logos/bmwgroup_uni_mannheim.png">
         </div>
       </div>
         <div class="column">
