add title of 3dm talk

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="column is-6">
           <figure class="testimonial">
             <blockquote>
-              Title of the talk not yet confirmed.
+              Map validation for autonomous driving – How to describe and verify accuracy, integrity and completeness of HD Maps
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/gunnar.png" alt=""/>
