indicate that cfp is closed

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
       <div id="navbar-menu" class="navbar-menu is-static">
 
         <div class="navbar-end">
-          <a href="#section1" class="navbar-item is-secondary">
-            Scope
+          <a href="#section1" class="navbar-item">
+            <span class="button signup-button rounded secondary-btn raised">
+              Scope
+            </span>
           </a>
           <a href="#section4" class="navbar-item is-secondary">
             Invited Speakers
@@ -67,10 +69,8 @@
           <a href="#section6" class="navbar-item is-secondary">
             Organizers
           </a>
-          <a href="#section2" class="navbar-item">
-            <span class="button signup-button rounded secondary-btn raised">
-              Call for Papers
-            </span>
+          <a href="#section2" class="navbar-item is-secondary">
+            Call for Papers
           </a>
         </div>
       </div>
@@ -96,8 +96,10 @@
     <div id="cloned-navbar-menu" class="navbar-menu is-fixed">
 
       <div class="navbar-end">
-        <a href="#section1" class="navbar-item is-secondary">
-          Scope
+        <a href="#section1" class="navbar-item">
+          <span class="button signup-button rounded secondary-btn raised">
+            Scope
+          </span>
         </a>
         <a href="#section4" class="navbar-item is-secondary">
           Invited Speakers
@@ -111,10 +113,8 @@
         <a href="#section6" class="navbar-item is-secondary">
           Organizers
         </a>
-        <a href="#section2" class="navbar-item">
-          <span class="button signup-button rounded secondary-btn raised">
-            Call for Papers
-          </span>
+        <a href="#section2" class="navbar-item is-secondary">
+          Call for Papers
         </a>
       </div>
     </div>
@@ -289,7 +289,7 @@
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
         <h1 class="title section-title">Call for Papers</h1>
-        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the following topics .<br><br><ul><li><a href="#section1">Validated Road Models</a></li><li><a href="#section1">Map Data Life-Cycle Management</a></li><li><a href="#section1">Mapping Fraud Detection and Prevention</a></li></ul><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2020 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least two members of the organization committee. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.</h3>
+        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the following topics .<br><br><ul><li><a href="#section1">Validated Road Models</a></li><li><a href="#section1">Map Data Life-Cycle Management</a></li><li><a href="#section1">Mapping Fraud Detection and Prevention</a></li></ul><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2020 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least three independent reviewers. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.</h3>
       </div>
       <div class="column is-5 mt-40">
         <article class="media icon-box">
@@ -303,7 +303,7 @@
               <p>
                 <span class="icon-box-title">Submission Deadline</span>
 
-                <span class="icon-box-text">March 14th, 2020 (firm deadline, no extensions)<br>Submission through <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">PaperPlaza</a><br>Workshop code: <strong>hr9k9</strong></span>
+                <span class="icon-box-text">March 14th, 2020 (firm deadline, no extensions)<br>Submission through <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">PaperPlaza</a> (closed)<br>Workshop code: <strong>hr9k9</strong></span>
               </p>
             </div>
           </div>
@@ -361,7 +361,7 @@
     <div class="columns">
       <div class="column is-5 is-offset-1">
         <div class="has-text-justified">
-		Safety and comfort of autonomous vehicles (AVs) critically  depend on the availability of accurate environment models. At runtime, data coming from maps and from sensors are fused together with the goal of providing a unique and consistent view of the environment to software components  responsible  for  maneuver  and  trajectory planning.  One  integral  part  of  this  view  is  the  road model,  which  is  a  geometric  and  semantic  description of  the  road  around  the  AV,  composed  of  lanes,  traffic lights/signs,  traffic  rules  and  right  of  way.  From  the perspective of a fusion algorithm, maps are sensors with an almost unlimited field of view (FOV) and with a large, potentially  unknown,  perception  delay.  The  unlimited FOV provided by maps allow AVs to speculatively plan upcoming maneuvers and trajectories on those areas not observed by other sensors yet. In urban scenarios this is extremely important, since traffic can strongly occlude the  actual  FOV  of  other  sensors.  Still,  the  unknown delay affecting map data may yield to conclusions about the environment model based on outdated information.
+		Safety and comfort of autonomous vehicles (AVs) critically depend on the availability of accurate environment models. At runtime, data coming from maps and from sensors are fused together with the goal of providing a unique and consistent view of the environment to software components  responsible  for  maneuver  and  trajectory planning.  One  integral  part  of  this  view  is  the  road model,  which  is  a  geometric  and  semantic  description of  the  road  around  the  AV,  composed  of  lanes,  traffic lights/signs,  traffic  rules  and  right  of  way.  From  the perspective of a fusion algorithm, maps are sensors with an almost unlimited field of view (FOV) and with a large, potentially  unknown,  perception  delay.  The  unlimited FOV provided by maps allow AVs to speculatively plan upcoming maneuvers and trajectories on those areas not observed by other sensors yet. In urban scenarios this is extremely important, since traffic can strongly occlude the  actual  FOV  of  other  sensors.  Still,  the  unknown delay affecting map data may yield to conclusions about the environment model based on outdated information.
 
         </div>
       </div>
