--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.eab36ece5c734e299fb538df6f9f1406f901e0a4383152b8d72595b7920ec6b2.css" integrity="sha256-6rNuzlxzTimftTjfb58UBvkB4KQ4MVK41yWVt5IOxrI=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.d59e5803479cbead8715daba7af87e035fdfc228312ae3c475e8443106eb237d.css" integrity="sha256-1Z5YA0ecvq2HFdq6evh&#43;A1/fwigxKuPEdehEMQbrI30=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 <link rel="stylesheet" type="text/css" href="/css/cookieconsent.min.css" />
 
@@ -251,7 +251,20 @@
 
     <div class="content-wrapper">
       <div class="columns is-vcentered">
-        <div class="column is-6">
+        <div class="column is-4">
+          <figure class="testimonial">
+            <blockquote>
+              Safe Automated Driving in a Changing World - Challenges and Trends
+            </blockquote>
+            <div class="author2">
+		    <p><img src="/images/illustrations/faces/christoph.png" alt=""/>
+		    <img src="/images/illustrations/faces/jan.png" alt=""/></p>
+              <h5>Christoph Stiller &amp; Jan-Hendrik Pauls</h5>
+	      <span>Professor &amp; PhD Student<br><a href="https://www.mrt.kit.edu/" target="_blank">Institut für Mess- und Regelungstechnik, KIT</a></span>
+            </div>
+          </figure>
+        </div>
+        <div class="column is-4">
           <figure class="testimonial">
             <blockquote>
               Map validation for autonomous driving – How to describe and verify accuracy, integrity and completeness of HD Maps
@@ -263,7 +276,7 @@
             </div>
           </figure>
         </div>
-        <div class="column is-6">
+        <div class="column is-4">
           <figure class="testimonial">
             <blockquote>
               Precise Positioning and Mapping for Driverless Vehicles: Analysis of Sensible 4&#39;s All-Weather Solutions for Automated Driving in Urban Environment
