--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.d59e5803479cbead8715daba7af87e035fdfc228312ae3c475e8443106eb237d.css" integrity="sha256-1Z5YA0ecvq2HFdq6evh&#43;A1/fwigxKuPEdehEMQbrI30=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.300159bbce03566ee9f5dfcf1e931bbf27bfbebbf001fc991edfaa5df3896c34.css" integrity="sha256-MAFZu84DVm7p9d/PHpMbvye/vrvwAfyZHt&#43;qXfOJbDQ=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 <link rel="stylesheet" type="text/css" href="/css/cookieconsent.min.css" />
 
