update umar image

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="author">
               <img src="/images/illustrations/faces/umar.png" alt=""/>
               <h5>Umar Zakir Abdul Hamid</h5>
-	      <span>Senior Autonomous Vehicle Engineer<br><a href="https://www.sensible4.fi" target="_blank">Sensible 4</a></span>
+	      <span>Team Lead (Algorithm Development)<br><a href="https://www.sensible4.fi" target="_blank">Sensible 4</a></span>
             </div>
           </figure>
         </div>
