change title of umar's talk

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 	<div class=column&#32;is-6>
           <figure class="testimonial">
             <blockquote>
-              Precise Positioning and Mapping for Driverless Vehicles: Analysis of Sensible 4&#39;s All-Weather Solutions for Automated Driving in Urban Environment
+              Sensible 4’s Solutions for Automated Driving in Urban Environment Enabling All-Weather Automated Driving Experience
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/umar.png" alt=""/>
