change title of umar's talk 2

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 	  <td>11:05</td>
 	  <td>-</td>
 	  <td>11:30</td>
-	  <td>Precise Positioning and Mapping for Driverless Vehicles: Analysis of Sensible 4&#39;s All-Weather Solutions for Automated Driving in Urban Environment</td>
+	  <td>Sensible 4’s Solutions for Automated Driving in Urban Environment Enabling All-Weather Automated Driving Experience</td>
 	  <td>Umar Zakir Abdul Hamid</td>
 	  <td>Invited Talk</td>
 	</tr>
