--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
 
 <meta property="og:title" content="Second Workshop on Online Map Validation and Road Model Creation" />
-<meta property='og:image' content="https://map-validation.github.io/frontMavroc.png" />
+<meta property='og:image' content="https://map-validation.github.io/images/illustrations/front.png" />
 <meta property="og:description" content="iv2021, intelligent vehicles, ieee, conference, map validation, autonomous driving, change detection, maps, mapping, slam" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://map-validation.github.io/" />
