--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <p>
                 <span class="icon-box-title">Submission Deadline</span>
 
-                <span class="icon-box-text">March 29th, 2021 (firm deadline, no extensions)<br>Submission through <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">PaperPlaza</a> <br>Workshop code: <strong>3n685</strong></span>
+                <span class="icon-box-text">March 29th, 2021 <br>Submission through <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">PaperPlaza</a> <br>Workshop code: <strong>3n685</strong></span>
               </p>
             </div>
           </div>
