add faces from angelo and christopher

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
         <h1 class="title section-title">Call for Papers</h1>
-        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the following topics:<br><br><li><a href="#section1">Validated Road Models</a></li><li><a href="#section1">Map Data Life-Cycle Management</a></li><li><a href="#section1">Mapping Fraud Detection and Prevention</a></li></ul><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2021 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least three independent reviewers. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.<br/><br/>Due to the pandemic situtation we expect the workshop to be held either purely virtually or in a hybrid format with the possibility of in-person attendance.</h3>
+        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the following topics:<br><br><li><a href="#section1">Validated Road Models</a></li><li><a href="#section1">Map Data Life-Cycle Management</a></li><li><a href="#section1">Mapping Fraud Detection and Prevention</a></li></ul><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2021 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least three independent reviewers. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.<br/><br/>Due to the pandemic situation we expect the workshop to be held either purely virtually or in a hybrid format with the possibility of in-person attendance.</h3>
       </div>
       <div class="column is-5 mt-40">
         <article class="media icon-box">
@@ -473,7 +473,7 @@
               Angelo Cenedese received the M.Sc. and the Ph.D.  degrees from the University of Padova, Italy, where he is currently an Associate Professor with the Department of Information Engineering. He is founder and leader of the SPARCS (SPace-Aerial-gRound Control Systems) research group. He has held several visiting positions at the UKAEA-JET laboratories in the Culham Research Centre (UK), the UCLA Vision Lab (CA-USA), the F4E European Agency (Spain). His research interests include system modeling, control theory and its applications, multiagent systems, and mobile robotics, including autonomous vehicle systems. On these subjects, he has published more than 150 papers and holds three patents.
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
+              <img src="/images/illustrations/faces/angelo.png" alt=""/>
               <h5>Angelo Cenedese</h5>
 	      <span><br>University of Padova</span>
             </div>
@@ -511,7 +511,7 @@
               Christopher Plachetka received his Master degree in 2017 from Technical University of Braunschweig, Germany, with a major focus on automotive systems and pattern recognition. In his master thesis, he focused on deep learning-based object detection and automatic labeling of datasets, which lead to the publication of the TUBS Road User Dataset during his time as scientific assistant in 2018. Since 2019, Christopher works at Volkswagen AG, Wolfsburg, Germany, as a PhD candidate. His research interests include deep learning-based deviation detection between sensor and map data, LiDAR-based object detection, and road model creation.
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
+              <img src="/images/illustrations/faces/christopher.png" alt=""/>
               <h5>Christopher Plachetka</h5>
 	      <span><br>Volkswagen</span>
             </div>
