fix indent, add datasets

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/css/style.min.36a8c80ec7b7858300fd2e2940ace7a2e7b7dd42d5be531a83aa80e54a02696a.css" integrity="sha256-NqjIDse3hYMA/S4pQKznoue33ULVvlMag6qA5UoCaWo=">
+<link rel="stylesheet" type="text/css" href="/css/style.min.498b0fc81233b426e2cf03bd2e4f4afbad9428dd08d687847190c10a9b6270c7.css" integrity="sha256-SYsPyBIztCbizwO9Lk9K&#43;62UKN0I1oeEcZDBCpticMc=">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 <link rel="stylesheet" type="text/css" href="/css/cookieconsent.min.css" />
 
@@ -343,7 +343,7 @@
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
         <h1 class="title section-title">Call for Papers</h1>
-        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the following topics:<br><br><li><a href="#section1">Validated Road Models</a></li><li><a href="#section1">Map Data Life-Cycle Management</a></li><li><a href="#section1">Mapping Fraud Detection and Prevention</a></li></ul><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2021 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least three independent reviewers. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.<br/><br/>Due to the pandemic situation we expect the workshop to be held either purely virtually or in a hybrid format with the possibility of in-person attendance.</h3>
+        <h3 class="subtitle is-5 is-muted">We are soliciting high quality papers covering, but not limited to, the following topics:<br><br><ul><li><a href="#section1">Validated Road Models</a></li><li><a href="#section1">Map Data Life-Cycle Management</a></li><li><a href="#section1">Mapping Fraud Detection and Prevention</a></li></ul><br>We accept the following forms of contributions:<br><br><ul><li>Research papers</li><li>Data sets</li></ul>  <br>Data set submissions shall include (1) one data set with labelling, (2) a supporting paper (to clarify the importance of the data set, a description on how to use it, and what features of map validation and road model approaches can be best evaluated with the proposed data set), and (3) the code that exemplifies how to access the data. Authors submitting a data set will be asked to submit and share their data via the <a href="https://ieee-dataport.org/" target="_blank">IEEE DataPort</a>.<br><br>Paper length should not exceed 6 pages (two additional pages allowed with a fee) according to the <a href="https://its.papercept.net/conferences/scripts/start.pl" target="_blank">IEEE IV 2021 Guidelines</a>.<br><br>Each paper will undergo a peer-reviewing process by at least three independent reviewers. Contributions will be reviewed according to relevance, originality and novel ideas, technical soundness and quality of presentation.<br><br>Due to the pandemic situation we expect the workshop to be held either purely virtually or in a hybrid format with the possibility of in-person attendance.</h3>
       </div>
       <div class="column is-5 mt-40">
         <article class="media icon-box">
