add 2 speakers title and picture

--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
 	<div class=column&#32;is-6>
           <figure class="testimonial">
             <blockquote>
-              Title to be determined
+              From HD Maps to No Maps for Autonomous Driving
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
+              <img src="/images/illustrations/faces/burgard.png" alt=""/>
               <h5>Prof. Dr. Wolfram Burgard</h5>
 	      <span>Vice President &amp; Professor<br><a href="https://www.tri.global/about-us/wolfram-burgard/" target="_blank">Automated Driving at Toyota Research Institute</a> and <a href="http://www2.informatik.uni-freiburg.de/~burgard/" target="_blank">University of Freiburg</a></span>
             </div>
@@ -291,10 +291,10 @@
 	<div class=column&#32;is-6>
           <figure class="testimonial">
             <blockquote>
-              Title to be determined
+              Monitoring of Perception Systems for Certifiable Autonomous Vehicles
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
+              <img src="/images/illustrations/faces/carlone.png" alt=""/>
               <h5>Prof. Luca Carlone</h5>
 	      <span>Assistant Professor<br><a href="https://lucacarlone.mit.edu/" target="_blank">Massachusetts Institute of Technology</a></span>
             </div>
