add agenda and Xiaogong invated speaker

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
       <h3 class="subtitle is-5 light-text">We are proud to welcome the following invited speakers.</h3>
     </div>
 
+
     <div class="content-wrapper">
       <div class="columns is-vcentered">
 	
@@ -309,9 +310,9 @@
               Title to be determined
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
-              <h5>Dr. Shiyu Song</h5>
-	      <span>Principal Architect<br><a href="https://apollo.auto/" target="_blank">Baidu Autonomous Driving Car project</a></span>
+              <img src="/images/illustrations/faces/Dejan.png" alt=""/>
+              <h5>Dr. Dejan Vasic</h5>
+	      <span>General Manager<br><a href="http://datadev-ds.com/" target="_blank">DataDEV GmbH</a></span>
             </div>
           </figure>
         </div>
@@ -319,12 +320,12 @@
 	<div class=column&#32;is-6>
           <figure class="testimonial">
             <blockquote>
-              Title to be determined
+              Data-Efficient Perception for Autonomous Driving
             </blockquote>
             <div class="author">
-              <img src="/images/illustrations/faces/3.png" alt=""/>
-              <h5>Dr. Dejan Vasic</h5>
-	      <span>General Manager<br><a href="http://datadev-ds.com/" target="_blank">DataDEV GmbH</a></span>
+              <img src="/images/illustrations/faces/xiaodong.png" alt=""/>
+              <h5>Dr. Xiaodong Yang</h5>
+	      <span>Principal Scientist &amp; Head of Research<br><a href="https://www.qcraft.ai/en" target="_blank">QCraft</a></span>
             </div>
           </figure>
         </div>
@@ -444,8 +445,112 @@
   <div class="container">
 
     <div class="title-wrapper has-text-centered">
-      <h2 class="title is-2">Schedule</h2>
-      <h3 class="subtitle is-5 is-muted">The schedule will be prepared after the review process has been completed.</h3>
+      <h2 class="title is-2">Agenda</h2>
+      <h3 class="subtitle is-5 is-muted">Please note that this schedule is still preliminary and as such, subject to change.<br><br><strong>All the times below are in Nagoya time zone (UTC+9)</strong>.</h3>
+	</div>
+    <div class="content-wrapper">
+      <div class="columns">
+      <div class="column is-12">
+      <table>
+	<tr>
+	  <th>Begin</th>
+	  <th></th>
+	  <th>End</th>
+	  <th>Title</th>
+	  <th>Speaker/Author</th>
+	  <th>Type</th>
+	</tr>
+	<tr>
+	  <td>21:00</td>
+	  <td>-</td>
+	  <td>21:10</td>
+	  <td>Welcome Session</td>
+	  <td>Angelo Cenedese, Umar Zakir Abdul Hamid, Luca Parolini, Christopher Plachetka, Sebastian Schneider, Qing Rao, Oliver Wasenmüller, Roberto G. Valenti, Jenny Yuan</td>
+	  <td></td>
+	</tr>
+	<tr style="background-color: #d3f0fa">
+	  <td>21:10</td>
+	  <td>-</td>
+	  <td>21:50</td>
+	  <td>From HD Maps to No Maps for Autonomous Driving</td>
+	  <td>Prof. Dr. Wolfram Burgard</td>
+	  <td>Invited Talk</td>
+	</tr>
+	<tr style="background-color: #fbfbfb">
+	  <td>21:50</td>
+	  <td>-</td>
+	  <td>22:10</td>
+	  <td>HD Map Error Detection Using Smoothing and Multiple Drives</td>
+	  <td>Welte et al.</td>
+	  <td>Paper</td>
+	</tr>
+	<tr style="background-color: #d3f0fa">
+	  <td>22:10</td>
+	  <td>-</td>
+	  <td>22:50</td>
+	  <td>Monitoring of Perception Systems for Certifiable Autonomous Vehicles</td>
+	  <td>Prof. Luca Carlone</td>
+	  <td>Invited Talk</td>
+	</tr>
+	<tr style="background-color: #fbfbfb">
+	  <td>22:50</td>
+	  <td>-</td>
+	  <td>23:10</td>
+	  <td>Online and Adaptive Parking Availability Mapping: An Uncertainty-Aware Active Sensing Approach for Connected Vehicles</td>
+	  <td>Varotto, Cenedese</td>
+	  <td>Paper</td>
+	</tr>
+	<tr>
+	  <td>23:10</td>
+	  <td>-</td>
+	  <td>23:25</td>
+	  <td>Break</td>
+	  <td></td>
+	  <td></td>
+	</tr>
+	<tr style="background-color: #d3f0fa">
+	  <td>23:25</td>
+	  <td>-</td>
+	  <td>00:05</td>
+	  <td>TBD</td>
+	  <td>Dr. Dejan Vasic</td>
+	  <td>Invited Talk</td>
+	</tr>
+	<tr style="background-color: #fbfbfb">
+	  <td>00:05</td>
+	  <td>-</td>
+	  <td>00:25</td>
+	  <td>Towards Knowledge-Based Road Modeling for Automated Vehicles: Analysis and Concept for Incorporating Prior Knowledge</td>
+	  <td>Fricke et al.</td>
+	  <td>Paper</td>
+	</tr>
+	<tr style="background-color: #fbfbfb">
+	  <td>00:25</td>
+	  <td>-</td>
+	  <td>01:05</td>
+	  <td>Data-Efficient Perception for Autonomous Driving</td>
+	  <td>Dr. Xiaodong Yan</td>
+	  <td>Invited Talk</td>
+	</tr>
+	<tr style="background-color: #d3f0fa">
+	  <td>01:05</td>
+	  <td>-</td>
+	  <td>01:25</td>
+	  <td>Use of Probabilistic Graphical Methods for Online Map Validation</td>
+	  <td>Fabris et. al.</td>
+	  <td>Paper</td>
+	</tr>
+	<tr>
+	  <td>01:25</td>
+	  <td>-</td>
+	  <td>01:35</td>
+	  <td>Closing Remarks</td>
+	  <td>Angelo Cenedese, Umar Zakir Abdul Hamid, Luca Parolini, Christopher Plachetka, Sebastian Schneider, Qing Rao, Oliver Wasenmüller, Roberto G. Valenti, Jenny Yuan</td>
+	  <td></td>
+	</tr>
+      </table>
+      </div>
+      </div>
 	</div>
     <div class="media-content mt-20">    
       <div class="divider is-centered"></div>
