fix agenda and add date

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </h1>
         
         <h2 class="subtitle is-5 is-muted">
-          A workshop being held in conjunction with the<br><strong><a href="https://2021.ieee-iv.org/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2021</a>,</strong> July 11-15th, 2021, Nagoya, Japan + <a href="https://zoom.us/" target="_blank">Zoom</a>.
+          A workshop being held in conjunction with the<br><strong><a href="https://2021.ieee-iv.org/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2021</a>,</strong> July 12th, 2021, Nagoya, Japan + <a href="https://zoom.us/" target="_blank">Zoom</a>. <br><strong>Free registration to the workshop!</strong>
         </h2>
         
         <p>
@@ -446,7 +446,7 @@
 
     <div class="title-wrapper has-text-centered">
       <h2 class="title is-2">Agenda</h2>
-      <h3 class="subtitle is-5 is-muted">Please note that this schedule is still preliminary and as such, subject to change.<br><br><strong>All the times below are in Nagoya time zone (UTC+9)</strong>.</h3>
+      <h3 class="subtitle is-5 is-muted">Below the workshop agenda, which will be held online on July 12, 2021 starting at:<br>21:00 JPT (UTC+9) - 14:00 CEST (UTC+2) - 8:00 EDT (UTC-4) - 5:00 PDT (UTC-7).<br><strong>All the times in the agenda below are in Nagoya time zone, JPT (UTC+9)</strong>.</h3>
 	</div>
     <div class="content-wrapper">
       <div class="columns">
@@ -524,15 +524,15 @@
 	  <td>Fricke et al.</td>
 	  <td>Paper</td>
 	</tr>
-	<tr style="background-color: #fbfbfb">
+	<tr style="background-color: #d3f0fa">
 	  <td>00:25</td>
 	  <td>-</td>
 	  <td>01:05</td>
 	  <td>Data-Efficient Perception for Autonomous Driving</td>
-	  <td>Dr. Xiaodong Yan</td>
+	  <td>Dr. Xiaodong Yang</td>
 	  <td>Invited Talk</td>
 	</tr>
-	<tr style="background-color: #d3f0fa">
+	<tr style="background-color: #fbfbfb">
 	  <td>01:05</td>
 	  <td>-</td>
 	  <td>01:25</td>
