add linkto registration

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </h1>
         
         <h2 class="subtitle is-5 is-muted">
-          A workshop being held in conjunction with the<br><strong><a href="https://2021.ieee-iv.org/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2021</a>,</strong> July 11th, 2021, Nagoya, Japan + <a href="https://zoom.us/" target="_blank">Zoom</a>. <br><strong>Free registration to the workshop!</strong>
+          A workshop being held in conjunction with the<br><strong><a href="https://2021.ieee-iv.org/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2021</a>,</strong> July 11th, 2021, Nagoya, Japan + <a href="https://zoom.us/" target="_blank">Zoom</a>. <br><strong><a href="https://2021.ieee-iv.org/registration/" target="_blank">Free registration to the workshop!</a></strong>
         </h2>
         
         <p>
