set talk title of dejan

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 	  <td>23:25</td>
 	  <td>-</td>
 	  <td>00:05</td>
-	  <td>TBD</td>
+	  <td>HD Maps - Mobile Mapping and Modelling</td>
 	  <td>Dr. Dejan Vasic</td>
 	  <td>Invited Talk</td>
 	</tr>
