--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </h1>
         
         <h2 class="subtitle is-5 is-muted">
-          A workshop being held in conjunction with the<br><strong><a href="https://2021.ieee-iv.org/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2021</a>,</strong> July 12th, 2021, Nagoya, Japan + <a href="https://zoom.us/" target="_blank">Zoom</a>. <br><strong>Free registration to the workshop!</strong>
+          A workshop being held in conjunction with the<br><strong><a href="https://2021.ieee-iv.org/" target="_blank">IEEE Intelligent Vehicles Symposium - IV2021</a>,</strong> July 12th, 2021, Nagoya, Japan + <a href="https://zoom.us/" target="_blank">Zoom</a>. <br><strong>Free registration to the workshop!</strong><br><a href="https://zoom.us/j/94457807394?pwd=MTVUQThlMjJCZkJrZnJZV1ltdmt4Zz09/" target="_blank">Workshop's Zoom link</a>
         </h2>
         
         <p>
@@ -307,7 +307,7 @@
 	<div class=column&#32;is-6>
           <figure class="testimonial">
             <blockquote>
-              Title to be determined
+              HD maps – Mobile mapping and modelling
             </blockquote>
             <div class="author">
               <img src="/images/illustrations/faces/Dejan.png" alt=""/>
@@ -489,7 +489,7 @@
 	  <td>-</td>
 	  <td>22:50</td>
 	  <td>Monitoring of Perception Systems for Certifiable Autonomous Vehicles</td>
-	  <td>Prof. Luca Carlone</td>
+	  <td>Prof. Dr. Luca Carlone</td>
 	  <td>Invited Talk</td>
 	</tr>
 	<tr style="background-color: #fbfbfb">
@@ -512,8 +512,8 @@
 	  <td>23:25</td>
 	  <td>-</td>
 	  <td>00:05</td>
-	  <td>TBD</td>
-	  <td>Dr. Dejan Vasic</td>
+	  <td>HD maps – Mobile mapping and modelling</td>
+	  <td>Prof. Dr. Dejan Vasic</td>
 	  <td>Invited Talk</td>
 	</tr>
 	<tr style="background-color: #fbfbfb">
