added slides of presentation

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 	  <th>Begin</th>
 	  <th></th>
 	  <th>End</th>
-	  <th>Title</th>
+	  <th>Title </th>
 	  <th>Speaker/Author</th>
 	  <th>Type</th>
 	</tr>
@@ -472,7 +472,7 @@
 	  <td>21:10</td>
 	  <td>-</td>
 	  <td>21:50</td>
-	  <td>From HD Maps to No Maps for Autonomous Driving</td>
+	  <td>From HD Maps to No Maps for Autonomous Driving <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/invited-speakers/from_hd_maps_to_no_maps.pdf">[Slides]</a></td>
 	  <td>Prof. Dr. Wolfram Burgard</td>
 	  <td>Invited Talk</td>
 	</tr>
@@ -480,7 +480,7 @@
 	  <td>21:50</td>
 	  <td>-</td>
 	  <td>22:10</td>
-	  <td>HD Map Error Detection Using Smoothing and Multiple Drives</td>
+	  <td>HD Map Error Detection Using Smoothing and Multiple Drives <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/paper-presentations/HD_Map_Errors_Detection_Using_Smoothing_and_Multiple_Drivers.pdf">[Slides]</a></td>
 	  <td>Welte et al.</td>
 	  <td>Paper</td>
 	</tr>
@@ -488,7 +488,7 @@
 	  <td>22:10</td>
 	  <td>-</td>
 	  <td>22:50</td>
-	  <td>Monitoring of Perception Systems for Certifiable Autonomous Vehicles</td>
+	  <td>Monitoring of Perception Systems for Certifiable Autonomous Vehicles <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/invited-speakers/slides_Carlone.pdf">[Slides]</a></td>
 	  <td>Prof. Dr. Luca Carlone</td>
 	  <td>Invited Talk</td>
 	</tr>
@@ -496,7 +496,7 @@
 	  <td>22:50</td>
 	  <td>-</td>
 	  <td>23:10</td>
-	  <td>Online and Adaptive Parking Availability Mapping: An Uncertainty-Aware Active Sensing Approach for Connected Vehicles</td>
+	  <td>Online and Adaptive Parking Availability Mapping - An Uncertainty-Aware Active Sensing Approach for Connected Vehicles <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/paper-presentations/Online_and_Adaptive_Parking_Availability_Mapping-An_Uncertainty-Aware_Active_Sensing_Approach_for_Connected_Vehicles.pdf">[Slides]</a></td>
 	  <td>Varotto, Cenedese</td>
 	  <td>Paper</td>
 	</tr>
@@ -512,7 +512,7 @@
 	  <td>23:25</td>
 	  <td>-</td>
 	  <td>00:05</td>
-	  <td>HD maps – Mobile mapping and modelling</td>
+	  <td>HD maps – Mobile mapping and modelling <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/invited-speakers/Dejan-HD_maps–Mobile_mapping_and_modelling.pdf">[Slides]</a></td>
 	  <td>Prof. Dr. Dejan Vasic</td>
 	  <td>Invited Talk</td>
 	</tr>
@@ -520,7 +520,7 @@
 	  <td>00:05</td>
 	  <td>-</td>
 	  <td>00:25</td>
-	  <td>Towards Knowledge-Based Road Modeling for Automated Vehicles: Analysis and Concept for Incorporating Prior Knowledge</td>
+	  <td>Towards Knowledge-Based Road Modeling for Automated Vehicles - Analysis and Concept for Incorporating Prior Knowledge <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/paper-presentations/IEEE_IV_2021_WorkshopPaper_Fricke_V0_split.pdf">[Slides]</a></td>
 	  <td>Fricke et al.</td>
 	  <td>Paper</td>
 	</tr>
@@ -528,7 +528,7 @@
 	  <td>00:25</td>
 	  <td>-</td>
 	  <td>01:05</td>
-	  <td>Data-Efficient Perception for Autonomous Driving</td>
+	  <td>Data-Efficient Perception for Autonomous Driving <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/invited-speakers/IV2021-Xiaodong-Yang.pdf">[Slides]</a></td>
 	  <td>Dr. Xiaodong Yang</td>
 	  <td>Invited Talk</td>
 	</tr>
@@ -536,7 +536,7 @@
 	  <td>01:05</td>
 	  <td>-</td>
 	  <td>01:25</td>
-	  <td>Use of Probabilistic Graphical Methods for Online Map Validation</td>
+	  <td>Use of Probabilistic Graphical Methods for Online Map Validation <a href="https://github.com/map-validation/map-validation.github.io/blob/master/presentations/paper-presentations/Use_of_probabilistic_graphical_methods_for_online_map_validation.pdf">[Slides]</a></td>
 	  <td>Fabris et. al.</td>
 	  <td>Paper</td>
 	</tr>
